force-app/main/default/objects/vlocity_ins__VlocityTrackingEvent__e/fields/vlocity_ins__ActionContainerName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ActionContainerName__c</fullName>
    <description>Name of the container component record.</description>
    <label>Action Container Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>