force-app/main/default/objects/vlocity_ins__VlocityTrackingEvent__e/fields/vlocity_ins__EventName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EventName__c</fullName>
    <description>Name of the event. e.g. OS Step Load, Card Load etc</description>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>