force-app/main/default/objects/vlocity_ins__VlocityTrackingEvent__e/fields/vlocity_ins__TrackingCategory__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TrackingCategory__c</fullName>
    <description>UI or Server.</description>
    <label>Tracking Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>