force-app/main/default/objects/vlocity_ins__VlocityTrackingEvent__e/fields/vlocity_ins__TrackingGroupId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TrackingGroupId__c</fullName>
    <description>Id of the Vlocity Tracking Group record under which this event is captured.</description>
    <label>Tracking Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>